--- a/_old/construct.html
+++ b/_old/construct.html
@@ -11,6 +11,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="/js/lib/leaflet-providers.js"></script>
     <script src="/js/lib/google_tiles.js"></script>
+    <script src="/js/lib/yandex_tiles.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/js/object.types.js"></script>
